Add links for BTDiablo

--- a/index.html
+++ b/index.html
@@ -37,5 +37,12 @@
         <li><a target="_blank" href="https://maxroll.gg/d2/guides/amazon-leveling">Amazon</a></li>
         <li><a target="_blank" href="https://maxroll.gg/d2/guides/barbarian-leveling">Barb</a></li>
     </ul>
+
+    <hr>
+    <h3 id="BTDiablo">BTDiablo</h3>
+
+    <a target="_blank" href="https://btd.miraheze.org/wiki/Main_Page">Wiki</a>
+    <a target="_blank" href="https://github.com/BTNeandertha1/BTDiablo">GitHub</a>
+
 </body>
 </html>
