Add links for current builds

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="#Exp_Per_Lvl">Experience Per Level Chart</a></li>
                 <li><a href="#Item_Guide">Item Guide</a></li>
                 <li><a href="#Builds">Builds</a></li>
+                <li><a href="#BTDiablo">BTDiablo</a></li>
             </ul>
         </nav>
     </div>
@@ -36,6 +37,15 @@
         <li><a target="_blank" href="https://maxroll.gg/d2/guides/paladin-leveling">Paladin</a></li>
         <li><a target="_blank" href="https://maxroll.gg/d2/guides/amazon-leveling">Amazon</a></li>
         <li><a target="_blank" href="https://maxroll.gg/d2/guides/barbarian-leveling">Barb</a></li>
+    </ul>
+
+    <h4>My current builds</h4>
+    <ul>
+        <li><a target="_blank" href="https://maxroll.gg/d2/guides/fist-of-the-heavens-paladin">Fist of Heavens Paladin</a></li>
+        <li><a target="_blank" href="https://maxroll.gg/d2/guides/blizzard-sorceress">Blizzard Sorc</a></li>
+        <li><a target="_blank" href="https://maxroll.gg/d2/guides/poison-nova-necromancer">Poison Nova</a></li>
+        <li><a target="_blank" href="https://maxroll.gg/d2/guides/lightning-fury-amazon-guide">Lightning Fury Amazon</a></li>
+        <li><a target="_blank" href="https://maxroll.gg/d2/guides/berserk-barbarian">Berserk Barb</a></li>
     </ul>
 
     <hr>
