--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <hr>
     <h3 id="Exp_Per_Lvl">Experience Per Level Chart</h3>
-    <img width="33%" src="exp_chart.png" />
+    <img width="33%" src="assets/exp_chart.png" />
 
     <hr>
     <h3 id="Item_Guide"><a target="_blank" href="item_guide.html">Item guide</a></h3>
@@ -53,6 +53,47 @@
 
     <a target="_blank" href="https://btd.miraheze.org/wiki/Main_Page">Wiki</a>
     <a target="_blank" href="https://github.com/BTNeandertha1/BTDiablo">GitHub</a>
+
+    <hr>
+    <h3 id="Map_Types">Map Types Table</h3>
+    <a href="assets/map_types_table.png" target="_blank">
+        <img width="33%" src="assets/map_types_table.png" />
+    </a>
+
+    <hr>
+    <h3 id="Act_Maps">Act Maps</h3>
+    <table>
+        <tbody>
+            <tr>
+                <td>
+                    <h5>Act I</h5>
+                    <a href="assets/act_1.png" target="_blank">
+                        <img width="50%" src="assets/act_1.png" />
+                    </a>
+                </td>
+                <td>
+                    <h5>Act II</h5>
+                    <a href="assets/act_2.png" target="_blank">
+                        <img width="50%" src="assets/act_2.png" />
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h5>Act III</h5>
+                    <a href="assets/act_3.png" target="_blank">
+                        <img width="50%" src="assets/act_3.png" />
+                    </a>
+                </td>
+                <td>
+                    <h5>Act V</h5>
+                    <a href="assets/act_5.png" target="_blank">
+                        <img width="50%" src="assets/act_5.png" />
+                    </a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 
 </body>
 </html>
