--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <li><a href="#Item_Guide">Item Guide</a></li>
                 <li><a href="#Builds">Builds</a></li>
                 <li><a href="#BTDiablo">BTDiablo</a></li>
+                <li><a href="#Map_Types">Map Types Table</a></li>
+                <li><a href="#Act_Maps">Act Maps</a></li>
             </ul>
         </nav>
     </div>
@@ -56,9 +58,12 @@
 
     <hr>
     <h3 id="Map_Types">Map Types Table</h3>
-    <a href="assets/map_types_table.png" target="_blank">
-        <img width="33%" src="assets/map_types_table.png" />
-    </a>
+    <p>
+        <a href="assets/map_types_table.png" target="_blank">
+            <img width="33%" src="assets/map_types_table.png" />
+        </a>
+    </p>
+    <p><a target="_blank" href="https://www.youtube.com/watch?v=J1EFUYGk4CA">Source</a></p>
 
     <hr>
     <h3 id="Act_Maps">Act Maps</h3>
@@ -94,6 +99,10 @@
             </tr>
         </tbody>
     </table>
+
+    <p>
+        <a target="_blank" href="https://www.youtube.com/watch?v=J1EFUYGk4CA">Source</a>
+    </p>
 
 </body>
 </html>
