Persist theme state

--- a/item_guide.html
+++ b/item_guide.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div>
-    <button onclick="toggle_theme()">Toggle dark theme</button>
+    <button onclick="toggleDarkTheme()">Toggle dark theme</button>
     <h2>Diablo 2 Item Guide</h2>
     <p style="color: #b1b1b1;">
         This text is stripped down and slightly modified version of this <a href="https://www.purediablo.com/strategy/what-diablo-2-resurrected-items-to-keep">article</a>.
