--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <button onclick="toggle_theme()">Toggle dark theme</button>
+    <button onclick="toggleDarkTheme()">Toggle dark theme</button>
     <h2>Personal collection of notes and links for Diablo 2</h2>
 
     <div>
