Add Misc Notes section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="#BTDiablo">BTDiablo</a></li>
                 <li><a href="#Map_Types">Map Types Table</a></li>
                 <li><a href="#Act_Maps">Act Maps</a></li>
+                <li><a href="#Misc_Notes">Misc Notes</a></li>
             </ul>
         </nav>
     </div>
@@ -103,6 +104,12 @@
     <p>
         <a target="_blank" href="https://www.youtube.com/watch?v=J1EFUYGk4CA">Source</a>
     </p>
+
+    <h3 id="Misc_Notes">Misc Notes</h3>
+
+    <ul>
+        <li>Lam Esen's Tome is in Ruined Temple in Kurast Bazaar</li>
+    </ul>
 
 </body>
 </html>
