--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li><a target="_blank" href="https://maxroll.gg/d2/guides/fist-of-the-heavens-paladin">Fist of Heavens Paladin</a></li>
         <li><a target="_blank" href="https://maxroll.gg/d2/guides/blizzard-sorceress">Blizzard Sorc</a></li>
         <li><a target="_blank" href="https://maxroll.gg/d2/guides/poison-nova-necromancer">Poison Nova</a></li>
+        <li><a target="_blank" href="https://www.youtube.com/watch?v=2lJi7VTOANQ">Poison Nova w/ Summons</a></li>
         <li><a target="_blank" href="https://maxroll.gg/d2/guides/lightning-fury-amazon-guide">Lightning Fury Amazon</a></li>
         <li><a target="_blank" href="https://maxroll.gg/d2/guides/berserk-barbarian">Berserk Barb</a></li>
     </ul>
@@ -72,13 +73,11 @@
         <tbody>
             <tr>
                 <td>
-                    <h5>Act I</h5>
                     <a href="assets/act_1.png" target="_blank">
                         <img width="50%" src="assets/act_1.png" />
                     </a>
                 </td>
                 <td>
-                    <h5>Act II</h5>
                     <a href="assets/act_2.png" target="_blank">
                         <img width="50%" src="assets/act_2.png" />
                     </a>
@@ -86,13 +85,11 @@
             </tr>
             <tr>
                 <td>
-                    <h5>Act III</h5>
                     <a href="assets/act_3.png" target="_blank">
                         <img width="50%" src="assets/act_3.png" />
                     </a>
                 </td>
                 <td>
-                    <h5>Act V</h5>
                     <a href="assets/act_5.png" target="_blank">
                         <img width="50%" src="assets/act_5.png" />
                     </a>
